src/App.css
.App {
  font-family: "Poppins", sans-serif;
  background: #fafafa;
  font-weight: 300;
}
p {
  font-size: 1.1em;
  line-height: 1.7em;
  color: #999;
}
a,
a:hover,
a:focus {
  color: inherit;
  text-decoration: none;
  transition: all 0.3s;
}

.navbar {
  padding: 15px 10px;
  background: #fff;
  border: none;
  border-radius: 0;
  margin-bottom: 40px;
  box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.1);
}

.navbar-btn {
  box-shadow: none;
  outline: none !important;
  border: none;
}

.line {
  width: 100%;
  height: 1px;
  border-bottom: 1px dashed #ddd;
  margin: 40px 0;
}

i {
  font-size: 25px;
}
i,
span {
  display: inline-block;
}

.btn.focus,
.btn:focus {
  outline: 0;
  box-shadow: none;
}

.navFooter {
  position: fixed;
  bottom: 10px;
  width: 250px;
}
/* ---------------------------------------------------
    SIDEBAR STYLE
----------------------------------------------------- */

.wrapper {
  display: flex;
  align-items: stretch;
}

#sidebar {
  min-width: 250px;
  max-width: 250px;
  background: #411b22;
  transition: all 0.3s;
  color: white;
}

#sidebar.active {
  min-width: 80px;
  max-width: 80px;
  text-align: center;
}

#sidebar.active .sidebar-header h3,
#sidebar.active .CTAs,
#sidebar.active .navFooter {
  display: none;
}

#sidebar.active .sidebar-header strong {
  display: block;
}

#sidebar ul li a {
  text-align: left;
}

#sidebar.active ul li a {
  display: none;
  padding: 20px 10px;
  text-align: center;
  font-size: 0.85em;
  letter-spacing: 0.75px;
}

#sidebar ul .link a {
  text-align: left;
}

#sidebar.active ul .link a {
  display: none;
  padding: 20px 10px;
  text-align: center;
  font-size: 0.85em;
  letter-spacing: 0.75px;
}

#sidebar .sidebar-header {
  padding: 10px;
}

#sidebar .sidebar-header strong {
  display: none;
  font-size: 1.8em;
}

#sidebar ul.components {
  position: absolute;
  top: 50%;
  transform: translateY(-50%);
  padding: 20px 10px;
}

#sidebar ul li a {
  padding: 10px;
  font-size: 0.95em;
  display: block;
}

/* #sidebar ul li a:hover {
    color: #7386d5;
    background: #fff;
} */

#sidebar ul li a i {
  margin-right: 10px;
}

#sidebar ul li.active > a,
a[aria-expanded="true"] {
  color: #fff;
  background: #6d7fcc;
}

a[data-toggle="collapse"] {
  position: relative;
}

#sidebar ul .link a {
  padding: 10px;
  font-size: 0.95em;
  display: block;
}

/* #sidebar ul li a:hover {
    color: #7386d5;
    background: #fff;
} */

#sidebar ul .link a i {
  margin-right: 10px;
}

#sidebar ul .link.active > a,
a[aria-expanded="true"] {
  color: #fff;
  background: #6d7fcc;
}

a[data-toggle="collapse"] {
  position: relative;
}

.dropdown-toggle::after {
  display: block;
  position: absolute;
  top: 50%;
  right: 20px;
  transform: translateY(-50%);
}

ul ul a {
  font-size: 0.9em !important;
  padding-left: 30px !important;
  background: #6d7fcc;
}

ul.CTAs {
  padding: 20px;
}

ul.CTAs a {
  text-align: center;
  font-size: 0.9em !important;
  display: block;
  border-radius: 5px;
  margin-bottom: 5px;
}

a.download {
  background: #fff;
  color: #7386d5;
}

a.article,
a.article:hover {
  background: #6d7fcc !important;
  color: #fff !important;
}

/* ---------------------------------------------------
    CONTENT STYLE
----------------------------------------------------- */

#content {
  width: 100%;
  padding: 20px;
  margin-left: 80px;
  min-height: 100vh;
  transition: all 0.3s;
}

/*-------------------------------------------------------
                            Screen 3 
 -------------------------------------------------------*/
.bg-holder {
  height: 55vh;
  background-color: #e5ded9;
}
.bg-holder-school {
  height: 50vh;
  width: 70%;
  /* background-color: ; */
  background-image: url("./Images/coverschool.JPG");
  background-position: center;
  background-size: cover;
  background-repeat: no-repeat;
}
.bg-holder-about {
  height: 55vh;
  background-image: url("./Images/AboutUSBackground.JPG");
  background-position: center;
  background-size: cover;
  background-repeat: no-repeat;
}

.customp {
  font-weight: 400;
  font-size: 1em;
  padding: 50px 17%;
  line-height: 150%;
}
.squarepic1 {
  background-image: url("./Images/Anuradha.jpg");
  background-position: center;
  background-size: contain;
  background-repeat: no-repeat;
  min-height: 60vh;
  width: 100%;
  /* background-color: white; */
  z-index: 99;
}
.squarepic2 {
  background-image: url("./Images/Nat.jpg");
  background-position: center;
  background-size: contain;
  background-repeat: no-repeat;
  min-height: 60vh;
  width: 100%;
  /* background-color: white; */
  z-index: 99;
}

.nattext {
  padding-left: 3rem;
}

/*-------------------------------------------------------
                            Screen 4 
 -------------------------------------------------------*/
.holderbg1 {
  background-image: url("./Images/sssbgpic1.jpg");
  background-position: top;
  background-size: cover;
  background-repeat: no-repeat;
  min-height: 65vh;
  /* background-color: #e4e4e4; */
  width: 100%;
}
.holderbg2 {
  background-image: url("./Images/musicbgpic2.jpg");
  background-position: top;
  background-size: cover;
  background-repeat: no-repeat;
  min-height: 65vh;
  /* background-color: #e4e4e4; */
  width: 100%;
}
.holderbg3 {
  background-image: url("./Images/kalakaribgpic3.jpg");
  background-position: center;
  background-size: cover;
  background-repeat: no-repeat;
  min-height: 65vh;
  /* background-color: #e4e4e4; */
  width: 100%;
}

.customp1 {
  font-weight: 400;
  font-size: 1.1em;
  padding: 30px 7.5%;
  color: #222021;
  line-height: 150%;
}

/*-------------------------------------------------------
                            Screen 6
 -------------------------------------------------------*/

.bg-holderbg1 {
  height: 47vh;
  width: 60%;

  background-image: url("./Images/eventsbg1.jpg");
  background-position: center;
  background-size: cover;
  background-repeat: no-repeat;
}

.bg-holderbg2 {
  height: 47vh;
  width: 60%;
  background-image: url("./Images/eventsbg2.jpg");
  background-position: center;
  background-size: cover;
  background-repeat: no-repeat;
}
.bg-holderbg3 {
  height: 47vh;
  width: 60%;
  background-image: url("./Images/eventsbg3.jpg");
  background-position: center;
  background-size: cover;

  background-repeat: no-repeat;
}

.customP3 {
  padding: 0 10px;
  border-right: 2px solid black;
}
.customP3not {
  padding: 0 10px;
}

/*-------------------------------------------------------
                            Screen 7
 -------------------------------------------------------*/
.squarebgpic2 {
  /* background-image: url("./Images/classpic1.JPG"); */
  background-position: top;
  background-size: cover;
  background-repeat: no-repeat;
  min-height: 36vh;
  max-width: 80%;
  /* z-index: 99; */
}
.squarebgpic3 {
  background-image: url("./Images/carnoic2.jpg");
  background-position: center;
  background-size: cover;
  background-repeat: no-repeat;
  min-height: 36vh;

  width: 80%;

  z-index: 99;
  float: none;
}

.customp7 {
  /* font-weight: 500; */
  font-size: 0.95em;
  color: #41363d;
  line-height: 150%;
  text-align: justify;
}
#block1 {
  /* border-left: 1px solid #411b22; */
  line-height: 60%;
}
/* ---------------------------------------------------
    MEDIAQUERIES
----------------------------------------------------- */

@media (max-width: 768px) {
  #sidebar {
    min-width: 250px;
    max-width: 250px;
    background: rgb(65, 54, 61);
    transition: all 0.3s;
    color: white;
    height: 100vh;
  }

  #sidebar.active {
    min-width: 0px;
    max-width: 0px;
    text-align: center;
  }
  #sidebar.active .btn-main {
    display: none;
  }
  .dropdown-toggle::after {
    top: auto;
    bottom: 10px;
    right: 50%;
    -webkit-transform: translateX(50%);
    -ms-transform: translateX(50%);
    transform: translateX(50%);
  }
  #sidebar.active {
    margin-left: 0 !important;
  }
  #sidebar .sidebar-header h3,
  #sidebar .CTAs {
    display: none;
  }
  #sidebar .sidebar-header strong {
    display: block;
  }
  #sidebar ul li a {
    padding: 20px 10px;
  }
  #sidebar ul li a span {
    font-size: 0.85em;
  }
  #sidebar ul li a i {
    margin-right: 0;
    display: block;
  }
  #sidebar ul ul a {
    padding: 10px !important;
  }
  #sidebar ul li a i {
    font-size: 1.3em;
  }
  #sidebar {
    margin-left: 0;
  }
  #sidebarCollapse span {
    display: none;
  }
  .square {
    height: 35vh;
    width: 30vh;
    background-color: white;
    z-index: 99;
    position: relative;
    right: 10%;
  }
  .squarepic1 {
    background-image: url("./Images/Anuradha.jpg");
    background-position: center;
    background-size: contain;
    background-repeat: no-repeat;
    min-height: 50vh;
    width: 100%;
    /* background-color: white; */
    z-index: 99;
    margin: auto;
    float: none;
  }
  .squarepic2 {
    background-image: url("./Images/Anuradha.jpg");
    background-position: center;
    background-size: contain;
    background-repeat: no-repeat;
    min-height: 50vh;
    width: 100%;
    /* background-color: white; */
    z-index: 99;
    margin: auto;
    float: none;
  }

  .nattext {
    padding: unset;
    margin: 0 20px 0 20px;
  }

  .nospace {
    margin: 0 !important;
  }
  .squarebgpic3 {
    /* background-image: url("./Images/carnoic2.jpg"); */
    background-position: center;
    background-size: cover;
    background-repeat: no-repeat;
    min-height: 45vh;
  }

  /*-------------------------------------------------------
                            Screen 4 
 -------------------------------------------------------*/
  .bg-holder1 {
    height: 45vh;
    background-color: #e4e4e4;
    width: 100%;
  }

  .customp1 {
    font-weight: 400;
    font-size: 1.1em;
    padding: 30px 7.5%;
    color: #4d4249;
    line-height: 150%;
  }
  /*-------------------------------------------------------
                            Screen 6
 -------------------------------------------------------*/
  .bg-holder2 {
    height: 50vh;
    width: 100%;
    background-color: #e5ded9;
  }

  .customP3 {
    padding: 0 10px;
    /* border-right: 3px solid black; */
  }

  .square2 {
    height: 35vh;
    width: 30vh;
    /* background-color: white; */
    z-index: 99;
    float: none;
    margin: auto;
    /* position: relative;
        right: 10%; */
  }
  .square3 {
    height: 35vh;
    width: 30vh;
    /* background-color: #d7cec7; */
    z-index: 99;
    float: none;
    margin: auto;
    /* z-index: 99;
        position: relative;
        right: 10%; */
  }
  .customp7 {
    font-weight: 500;
    font-size: 0.95em;
    color: #41363d;
    line-height: 150%;
    text-align: justify;
  }
  #block1 {
    border: none;
  }
  #content {
    width: 100%;
    padding: 20px;
    margin-left: 0;
    /* min-height: 100vh; */
    transition: all 0.3s;
  }
}

/* Unlisted */

.listBox:focus {
  outline: none;
}

